// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown/Component Custom menu width 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component Icon only 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span />
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component Right aligned 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "flex-end",
      "width": 150,
    }
  }
>
  <div
    className="c0"
  >
    <div>
      <span
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <button
          className="c1 menuButton   "
          type="button"
        >
          <span />
          <div
            className="icon right-icon"
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <span
              className="c2"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height="1em"
                viewBox="2 2 20 20"
                width="1em"
              >
                <path
                  d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component Small size 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 32px;
  min-width: 32px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With maxHeight 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With ref 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With selected item 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With text 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With z-index 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  style={
    Object {
      "background": "aliceblue",
      "display": "flex",
      "width": 250,
      "zIndex": 9,
    }
  }
>
  <div
    style={
      Object {
        "marginRight": "10px",
      }
    }
  >
    z-index: 9
  </div>
  <div
    className="c0"
  >
    <div>
      <span
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <button
          className="c1 menuButton   "
          type="button"
        >
          <span />
          <div
            className="icon right-icon"
            style={
              Object {
                "transform": "translateX(0px)",
              }
            }
          >
            <span
              className="c2"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height="1em"
                viewBox="2 2 20 20"
                width="1em"
              >
                <path
                  d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
        </button>
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "background": "rgba(0, 0, 0, 0.5)",
        "height": 120,
        "marginLeft": "10px",
        "width": 75,
        "zIndex": 11,
      }
    }
  >
    z-index: 11
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component extended style 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c2 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c2:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c2 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c2:not(:disabled):hover,
.c2:not(:disabled).hovered,
.c2:not(:disabled):active,
.c2:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c2:not(:disabled):hover .icon,
.c2:not(:disabled).hovered .icon,
.c2:not(:disabled):active .icon,
.c2:not(:disabled).active .icon,
.c2:not(:disabled):focus .icon,
.c2:not(:disabled).focused .icon {
  color: #3498db;
}

.c2:not(:disabled).active,
.c2:not(:disabled):active {
  box-shadow: none;
}

.c2:focus,
.c2.focused {
  outline: none;
}

.c2.focus-visible,
.c2.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

.c1 {
  padding: 10px;
}

.c1 .menuButton {
  background: azure;
}

.c1 .menuButton .icon {
  text-shadow: 0 8px 4px orchid;
}

<div
  className="c0 c1"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c2 menuButton   "
        type="button"
      >
        <span>
          Select fruit
        </span>
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c3"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component with buttonProps 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 32px;
  min-width: 32px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 menuButton   "
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-8px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 11.414l-3.293 3.293a1 1 0 11-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L12 11.414z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span>
          Select fruit
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component with custom trigger 1`] = `
.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button>
        click
      </button>
    </span>
  </div>
</div>
`;
